tests/out/binaryop.test
Cog: Error: (4:27): cannot perform operation on type 'cstr'
    ----> tests/binaryop.cg
       |
     3 |     let name := c"Dry";
     4 |     let age : int = 50 + name;
       |                          ^~~~ 

Cog: Error: (4:22): invalid operation between 'int' and 'cstr'
    ----> tests/binaryop.cg
       |
     4 |     let age : int = 50 + name;
       |                     ^~   ^~~~ 

Cog: Error: (5:18): symbol 'age' was not declared in this scope
    ----> tests/binaryop.cg
       |
     4 |     let age : int = 50 + name;
     5 |     let age2 := age;
       |                 ^~~ 

cog: 3 semantic errors occurred
Cog: compilation aborted
